--- a/src/styles/globalstyle.scss
+++ b/src/styles/globalstyle.scss
@@ -2,15 +2,20 @@ html,
 body {
   padding: 0;
   margin: 0;
+  overflow-x: hidden;
 }
 
 html {
-  background-color: #f0f1f3;
+  background-color: #fff;
+  color: #222;
+  font-size: 16;
 }
 
 body {
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen,
-    Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  font-family: 'PAYW Pro', 'PAYW Pro KR', -apple-system, BlinkMacSystemFont,
+    'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue',
+    sans-serif;
+  font-size: 0.9rem;
 }
 
 * {
@@ -21,4 +26,8 @@ body {
 a {
   text-decoration: none;
   color: inherit;
+}
+
+p {
+  line-height: 1.4;
 }
