--- a/src/styles/globalstyle.scss
+++ b/src/styles/globalstyle.scss
@@ -7,7 +7,7 @@ body {
 
 html {
   background-color: #fff;
-  color: #222;
+  color: #333;
   font-size: 16;
 }
 
@@ -30,4 +30,8 @@ a {
 
 p {
   line-height: 1.4;
+}
+
+ul {
+  list-style: none;
 }
