--- a/src/styles/blog-post.scss
+++ b/src/styles/blog-post.scss
@@ -1,3 +1,171 @@
-article {
-  border: none;
+#blog-post {
+  $default-font-size: 0.9rem;
+
+  article {
+    .title {
+      font-size: $default-font-size * 3.5;
+      margin-bottom: 0.5rem;
+      line-height: 1;
+    }
+
+    .date {
+      color: #808080;
+      margin-bottom: 1rem;
+    }
+  }
+
+  section {
+    margin-top: 2.5rem;
+
+    hr {
+      display: block;
+      border: none;
+      appearance: none;
+      background-color: #f0f0f2;
+      height: 1px;
+      margin: 1rem 0;
+    }
+
+    & > p {
+      margin-bottom: 1rem;
+      font-size: $default-font-size;
+    }
+
+    h1,
+    h2,
+    h3 {
+      font-weight: 700;
+      margin-bottom: 1rem;
+    }
+
+    h1 {
+      font-size: $default-font-size * 2;
+      margin-bottom: 1.5rem;
+    }
+
+    h2 {
+      font-size: $default-font-size * 1.6;
+      margin-bottom: 1rem;
+      font-weight: 600;
+    }
+
+    h3 {
+      font-size: $default-font-size * 1.2;
+      margin-bottom: 0.5rem;
+      font-weight: 600;
+    }
+
+    h4,
+    h5,
+    h6 {
+      font-weight: 600;
+    }
+
+    & > blockquote {
+      background-color: #f0f0f2;
+      padding: 1rem;
+      border-radius: 0.3rem;
+      margin-bottom: 1rem;
+
+      blockquote {
+        background-color: rgba(#000, 0.05);
+        padding: 1rem;
+        border-radius: 0.3rem;
+      }
+
+      p {
+        margin: 0;
+
+        & + blockquote {
+          margin-top: 1rem;
+        }
+      }
+    }
+
+    ul,
+    ol {
+      margin: 1rem 0;
+    }
+
+    ul {
+      list-style-type: circle;
+    }
+
+    li {
+      margin-left: 2rem;
+      line-height: 1.5;
+    }
+
+    a {
+      color: #0e85f3;
+
+      &:hover {
+        text-decoration: underline;
+      }
+    }
+
+    pre {
+      background-color: #f0f0f2;
+      border-radius: 0.3rem;
+      font-family: monospace;
+      font-size: 0.9rem;
+      margin: 1rem 0;
+
+      & * {
+        text-shadow: none;
+      }
+
+      code {
+        font-family: 'JetBrains Mono', monospace;
+      }
+    }
+
+    img {
+      max-width: 100%;
+    }
+
+    table {
+      border-collapse: collapse;
+      margin: 1rem 0;
+      width: auto;
+
+      th,
+      td {
+        border: 1px solid #e0e0e0;
+        padding: 0.5rem;
+      }
+
+      thead {
+        tr {
+          background-color: #f0f0f2;
+        }
+      }
+    }
+  }
+
+  .nav {
+    margin-top: 2rem;
+
+    .nav-list {
+      display: flex;
+      flex-wrap: wrap;
+      justify-content: space-between;
+      align-items: center;
+
+      .nl-link {
+        background-color: #f0f0f2;
+        border-radius: 0.4rem;
+        padding: 0.5rem 0.6rem;
+        font-size: 0.8rem;
+        font-weight: 400;
+        transition: all 0.2s ease;
+
+        &:hover {
+          background-color: #fff;
+          box-shadow: 0 0.2rem 0.5rem rgba(#000, 0.2);
+          font-weight: 500;
+        }
+      }
+    }
+  }
 }
