--- a/src/styles/layout.scss
+++ b/src/styles/layout.scss
@@ -32,14 +32,26 @@
   }
 
   &.post {
-    font-size: 1.2rem;
+    font-size: 0.5rem;
+    margin-bottom: 2rem;
+
+    .arrow {
+      transition: transform 0.2s ease;
+      display: inline-block;
+    }
+
+    &:hover {
+      .arrow {
+        transform: translateX(-0.2rem);
+      }
+    }
   }
 }
 
 .footer {
   text-align: center;
-  font-size: 0.9rem;
+  font-size: 0.8rem;
   padding-bottom: 2rem;
-  margin-top: 2rem;
+  margin-top: 3rem;
   color: #808080;
 }
