--- a/src/styles/blog-post.scss
+++ b/src/styles/blog-post.scss
@@ -51,8 +51,16 @@
 
     h3 {
       font-size: $default-font-size * 1.2;
-      margin-bottom: 0.5rem;
+      margin-bottom: 1rem;
       font-weight: 600;
+    }
+
+    * {
+      & + h1,
+      & + h2,
+      & + h3 {
+        margin-top: 2rem;
+      }
     }
 
     h4,
