chore: add tutorial

--- a/src/styles/blog-post.scss
+++ b/src/styles/blog-post.scss
@@ -61,6 +61,18 @@
       & + h3 {
         margin-top: 2rem;
       }
+
+      & + h1 {
+        margin-top: 4rem;
+      }
+
+      & + h2 {
+        margin-top: 3rem;
+      }
+
+      & + h2 {
+        margin-top: 2rem;
+      }
     }
 
     h4,
@@ -70,9 +82,11 @@
     }
 
     & > blockquote {
-      background-color: #f0f0f2;
+      // background-color: #f0f0f2;
       padding: 1rem;
+      border: 1px solid #e0e0e0;
       border-radius: 0.3rem;
+      border-left: 4px solid black;
       margin-bottom: 1rem;
 
       blockquote {
@@ -112,24 +126,35 @@
       }
     }
 
+    code {
+      &,
+      & * {
+        font-family: 'JetBrains Mono', monospace;
+        font-size: 0.85rem;
+        text-shadow: none;
+        background-color: #fff2df;
+      }
+    }
+
     pre {
       background-color: #f0f0f2;
       border-radius: 0.3rem;
-      font-family: monospace;
-      font-size: 0.9rem;
+      font-family: 'JetBrains Mono', monospace;
       margin: 1rem 0;
 
+      code,
       & * {
         text-shadow: none;
-      }
-
-      code {
         font-family: 'JetBrains Mono', monospace;
+        background-color: transparent;
+        font-size: 0.85rem;
       }
     }
 
     img {
+      width: auto !important;
       max-width: 100%;
+      padding: 1rem 0 !important;
     }
 
     table {
@@ -152,7 +177,7 @@
   }
 
   .nav {
-    margin-top: 2rem;
+    margin-top: 3rem;
 
     .nav-list {
       display: flex;
